# book-management-system

./: CMakeLists.txt  csvtest.csv  cvtest_out.csv  forms5.fbp  forms6.fbp  resource.rc
src/: app.cpp  book_manager.cpp  issue_dialog.cpp  main_panel.cpp  menu_bar.cpp
src/inc/: book_manager.hpp  issue_dialog.hpp  main_panel.hpp  menu_bar.hpp
